# movie_db

./: .gitignore  Cargo.toml  Makefile  build.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/static/: all_movies.json  index.html  main.css
sql/: movies.sql  studios.sql
src/: handers.rs  handlers.rs  lib.rs  main.rs
src/db/: mod.rs  model.rs  schema.rs
static/: index.html
web/src/: Main.elm
