[package]
name = "movie_db"
version = "0.1.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.17"
futures = "0.1.25"
diesel = { version = "1.3.3", features = ["sqlite", "r2d2"] }
includedir = "0.5.0"
phf = "0.7.23"
structopt = "0.2.14"
log = "0.4.6"
pretty_env_logger = "0.3.0"
serde = "1.0.82"
serde_derive = "1.0.82"
uuid = { version = "0.7.1", features = ["serde", "v4"] }

[build-dependencies]
includedir_codegen = "0.5.0"

[profile.release]
lto = true
