[package]
name = "movie_db"
version = "0.1.0"
authors = ["Ben Goldberg <benaagoldberg@gmail.com>"]
edition = "2018"

[lib]
name = "moviedb"
path = "src/lib.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
futures = "0.1"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
includedir = "0.5"
phf = "0.7"
structopt = "0.2.14"
log = "0.4.6"
pretty_env_logger = "0.3"
serde = "1.0"
serde_derive = "1.0"
uuid = { version = "0.7", features = ["serde", "v4"] }

[build-dependencies]
includedir_codegen = "0.5.0"

[profile.release]
lto = true
